syntax = "proto3";

package mughieams.evermosassessment.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "protobuf/api/common.proto";

option go_package = "github.com/mughieams/evermos-assessment/protobuf/api;commerce_api";

service UserService {
  rpc Register(RegisterRequest) returns (MessageResponse) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }

  rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse) {
    option (google.api.http) = {get: "/v1/users"};
  }

  rpc UpdateUser(UpdateUserRequest) returns (MessageResponse) {
    option (google.api.http) = {
      patch: "/v1/users/{id}"
      body: "*"
    };
  }
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
}

message LoginRequest {
  string email = 1;
  string phone = 2;
  string password = 3 [(google.api.field_behavior) = REQUIRED];
}

message LoginResponse {
  string token = 1;
}

message User {
  int64 id = 1;
  string email = 2;
  string phone = 3;
}

message GetUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}